[gd_scene load_steps=2 format=3 uid="uid://d17pc7pd1xkc5"]

[ext_resource type="Script" path="res://addons/dkdata/dkdata_menu.gd" id="1_r1iw1"]

[node name="LocalizationMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r1iw1")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1

[node name="Character" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Character"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PositionLabel" type="Label" parent="TabContainer/Character/VBoxContainer"]
layout_mode = 2
text = "Position"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Character/VBoxContainer"]
layout_mode = 2

[node name="CharacterXPosition" type="SpinBox" parent="TabContainer/Character/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 80.0
allow_greater = true
allow_lesser = true
prefix = "X"

[node name="CharacterYPosition" type="SpinBox" parent="TabContainer/Character/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
value = 15.0
allow_greater = true
allow_lesser = true
prefix = "Y"

[node name="CharacterZPosition" type="SpinBox" parent="TabContainer/Character/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
value = 50.0
allow_greater = true
allow_lesser = true
prefix = "Z"

[node name="RotationLabel" type="Label" parent="TabContainer/Character/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Rotation"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Character/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="CharacterXRotation" type="SpinBox" parent="TabContainer/Character/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
allow_greater = true
allow_lesser = true
prefix = "X"

[node name="CharacterYRotation" type="SpinBox" parent="TabContainer/Character/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
value = 180.0
allow_greater = true
allow_lesser = true
prefix = "Y"

[node name="CharacterZRotation" type="SpinBox" parent="TabContainer/Character/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
allow_greater = true
allow_lesser = true
prefix = "Z"

[node name="Items" type="Control" parent="TabContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="VSeparator" type="HSplitContainer" parent="TabContainer/Items"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="TabContainer/Items/VSeparator"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Items/VSeparator/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AddItemButton" type="Button" parent="TabContainer/Items/VSeparator/Control2/VBoxContainer"]
layout_mode = 2
text = "Add Item"

[node name="ItemsTree" type="Tree" parent="TabContainer/Items/VSeparator/Control2/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
hide_root = true
scroll_horizontal_enabled = false

[node name="Control" type="Control" parent="TabContainer/Items/VSeparator"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemNameLabel" type="Label" parent="TabContainer/Items/VSeparator/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
text = "test text"

[node name="Dialogue" type="Control" parent="TabContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2

[connection signal="button_up" from="TabContainer/Items/VSeparator/Control2/VBoxContainer/AddItemButton" to="." method="_on_add_item"]
[connection signal="cell_selected" from="TabContainer/Items/VSeparator/Control2/VBoxContainer/ItemsTree" to="." method="_on_item_selection"]
